--- a/CSS/style.css
+++ b/CSS/style.css
@@ -122,3 +122,51 @@ li a:hover {
         /* Hace que la imagen tenga forma de círculo */
     
     }
+
+    td{
+        color: #111111;
+        font-size: 30px;
+        position: relative;
+        
+    }
+
+    .tabla1{
+        position: absolute;
+        top: 350px;
+        margin-left: 700px;
+    }
+
+    .tabla2{
+        position: absolute;
+        top: 600px;
+        margin-left: 700px;
+    }
+
+.menu_tacos h1{
+    font-size: 35px;
+    background-color:rgb(10, 94, 28);
+    color: white;
+
+}
+
+.menu_i{
+    position: absolute;
+    margin-left: 120px;
+    width: 120px;
+
+}
+ 
+
+.empresas {
+    position: absolute;
+    top: 300px;
+    left: 1500px; 
+    text-align: center; 
+}
+
+.empresas p{
+    background-color: #007308;
+    color: white;
+}
+
+
